--- a/frontend/log.html
+++ b/frontend/log.html
@@ -176,7 +176,7 @@
           } else {
             Swal.fire({
               title: 'Credenciales incorrectas!',
-              text: 'Inténte otra vez',
+              text: 'Inténte otra vezzzzz',
               icon: 'error'
             })
           }
