--- a/frontend/bodytutor.html
+++ b/frontend/bodytutor.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sitespool</title>
     <link rel="icon" href="espol.png" type="image/png" />
-    <link rel="stylesheet" href="stylesbody.css" />
+    <link rel="stylesheet" href="stylesbodytutor.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -55,18 +55,6 @@
         alt="Logo de Orientación Vocacional"
         style="max-width: 900px; max-height: 200px"
       />
-      <img
-      src="gratis.png"
-      alt="Gratis"
-      class="image small-image"
-      id= "freeIcon"
-    />
-      <img
-      src="premium.png"
-      alt="Premium"
-      class="premium small-image hideIcon"
-      id= "premiumIcon"
-  />
     </div>
     <div class="container">
       <div class="sidebar" id="sidebar">
@@ -90,11 +78,11 @@
         <button onclick="showColeccion()">
           <i class="fas fa-book" style="margin-right: 8px"></i> Colección
         </button>
-        <button onclick="showTestVocacional()">
-          <i class="fas fa-search" style="margin-right: 8px"></i> Test Vocacional
-        </button>
         <button onclick="showResena()">
           <i class="fas fa-pen" style="margin-right: 8px"></i> Reseña
+        </button>
+        <button onclick="showMonedero()">
+          <i class="fas fa-coins" style="margin-right: 8px"></i> Monedero
         </button>
         <!-- Nueva opción Log Out con el ícono -->
         <button
@@ -143,6 +131,6 @@
         </video>
       </div>
     </div>
-    <script src="scripts.js"></script>
+    <script src="scriptstutor.js"></script>
   </body>
 </html>
