--- a/frontend/body.html
+++ b/frontend/body.html
@@ -50,23 +50,25 @@
   </head>
   <body>
     <div class="title-bar">
-      <img
+      <img id="logo"
         src="sinfondobl.png"
         alt="Logo de Orientación Vocacional"
         style="max-width: 900px; max-height: 200px"
       />
+    <div class="iconos">
       <img
       src="gratis.png"
       alt="Gratis"
-      class="image small-image"
+      class="imageIcon image small-image"
       id= "freeIcon"
     />
       <img
       src="premium.png"
       alt="Premium"
-      class="premium small-image hideIcon"
+      class="imageIcon image small-image hideIcon"
       id= "premiumIcon"
   />
+    </div>
     </div>
     <div class="container">
       <div class="sidebar" id="sidebar">
