--- a/frontend/log.html
+++ b/frontend/log.html
@@ -97,7 +97,7 @@
     }
 
     document.addEventListener('DOMContentLoaded', () => {
-      localStorage.setItem("pagado",false)
+      localStorage.setItem("pagado","false")
       const btnIniciarSesionModal = document.getElementById('btnIniciarSesionModal');
       const btnRegistro = document.getElementById('btnRegistro');
       const btnAbrirModalInicioSesion = document.getElementById('btnAbrirModalInicioSesion');
