--- a/frontend/bodytutor.html
+++ b/frontend/bodytutor.html
@@ -6,6 +6,7 @@
     <title>Sitespool</title>
     <link rel="icon" href="espol.png" type="image/png" />
     <link rel="stylesheet" href="stylesbodytutor.css" />
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -82,7 +83,10 @@
           <i class="fas fa-pen" style="margin-right: 8px"></i> Reseña
         </button>
         <button onclick="showMonedero()">
-          <i class="fas fa-coins" style="margin-right: 8px"></i> Monedero
+          <i class="fas fa-wallet" style="margin-right: 8px"></i> Monedero
+        </button>
+        <button onclick="showEstadisticas()">
+          <i class="fas fa-chart-bar" style="margin-right: 8px"></i> Estadísticas
         </button>
         <!-- Nueva opción Log Out con el ícono -->
         <button
